playbooks/files/node-exporter-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  namespace: vm-operator
  labels:
    app: node-exporter
spec:
  selector:
    app: node-exporter
  ports:
    - name: metrics
      port: 9100
      targetPort: 9100
  clusterIP: None
